--- a/10_website/index.html
+++ b/10_website/index.html
@@ -54,7 +54,7 @@
 					<h1 class="codrops-header__title">Organic <br> Shape <br/>Animations</h1>
 					<p class="codrops-header__subtitle">Hover effects with SVG clipPath</p>
 				</header>
-				
+
 				<div class="item item--style-1" data-animation-path-duration="800" data-animation-path-easing="easeInOutCubic" data-path-elasticity="300" data-morph-path="M 189,80.37 C 232.6,46.67 352.5,67.06 350.9,124.1 349.5,173.4 311.7,168 312.4,248.1 312.9,301.1 382.5,319.2 368.5,379.1 349.4,460.6 137.7,467.5 117.6,386.3 98.68,309.7 171.5,292.2 183.6,240.1 195.7,188.2 123.8,130.7 189,80.37 Z" data-path-scaleX="0.8" data-path-scaleY="1.1" data-path-translateX="0" data-path-translateY="30" data-path-rotate="5" data-animation-image-duration="800" data-animation-image-easing="easeInOutQuart" data-image-elasticity="300" data-image-scaleX="1.2" data-image-scaleY="1.2" data-image-translateX="-20" data-image-translateY="-45" data-image-rotate="-5" data-animation-deco-duration="1300" data-animation-deco-easing="easeOutQuad" data-deco-elasticity="300" data-deco-scaleX="0.8" data-deco-scaleY="0.9" data-deco-translateX="-5" data-deco-translateY="-5" data-deco-rotate="2">
 					<svg class="item__svg" width="500px" height="500px" viewBox="0 0 500 500">
 						<clipPath id="clipShape1">
@@ -69,8 +69,8 @@
 					</svg>
 					<div class="item__meta">
 						<div class="item__number">
-							<span class="item__specimen">21</span>
-							<span class="item__reference">BX3</span>
+							<span class="item__reference"> 01</span>
+							<span class="item__specimen">About Us</span>
 						</div>
 						<h2 class="item__title">Codium fasciculatus</h2>
 						<h3 class="item__subtitle">Exoplanet Gliese 180 b</h3>
@@ -78,7 +78,7 @@
 				</div>
 
 				<div class="item item--style-2" data-animation-path-duration="1500" data-animation-path-easing="easeOutElastic" data-morph-path="M 418.1,159.8 C 460.9,222.9 497,321.5 452.4,383.4 417.2,432.4 371.2,405.6 271.3,420.3 137.2,440 90.45,500.6 42.16,442.8 -9.572,381 86.33,289.1 117.7,215.5 144.3,153.4 145.7,54.21 212.7,36.25 290.3,15.36 373.9,94.6 418.1,159.8 Z" data-path-scaleY="1.1" data-image-scaleX="1.3" data-image-scaleY="1.3" data-animation-deco-duration="2000" data-animation-deco-delay="100" data-deco-rotate="-10">
-					<svg class="item__svg" width="500px" height="500px" viewBox="0 0 500 500">
+					<svg class="item__svg" width="1500px" height="1500px" viewBox="0 0 500 500">
 						<clipPath id="clipShape2">
 							<path class="item__clippath" d="M 378.1,121.2 C 408.4,150 417.2,197.9 411,245.8 404.8,293.7 383.5,341.7 353.4,370.7 303.2,419.1 198.7,427.7 144.5,383.8 86.18,336.5 67.13,221.3 111.9,161 138.6,125 188.9,99.62 240.7,90.92 292.4,82.24 345.6,90.32 378.1,121.2 Z" />
 						</clipPath>
@@ -86,7 +86,7 @@
 							<use xlink:href="#deco2" />
 						</g>
 						<g clip-path="url(#clipShape2)">
-							<image class="item__img" xlink:href="img/2.png" x="0" y="0" height="500px" width="500px" />
+							<image class="item__img" xlink:href="img/2.png" x="0" y="0" height="100px" width="100px" />
 						</g>
 					</svg>
 					<div class="item__meta">
@@ -94,7 +94,7 @@
 							<span class="item__specimen">65</span>
 							<span class="item__reference">AG9</span>
 						</div>
-						<h2 class="item__title">Amphiroa corymbosa</h2>
+						<h2 class="item__title">Amphiroa corymbosaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</h2>
 						<h3 class="item__subtitle">Exoplanet Kepler-174d</h3>
 					</div>
 				</div>
